# FerrumAI

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_documentation.yml
docs/: index.md  usage.md
documentation/: index.html
documentation/search/: search_index.json
ferrumai/: __init__.py  gsheet.py
