[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FerrumAI"
version = "0.0.1-alpha"
description = "A python library for providing helping functions for data augmentation."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Sahil Gour", email = "b25bs1304@iitj.ac.in" },
  { name = "Sevrus", email = "sevrus@duck.com" }
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "pandas>=2.0",
  "numpy>=2.0",
  "requests>=2.2",
  "scikit-learn",
  "opensimplex"
]

[project.urls]
homepage = "https://github.com/sevruscorporations/FerrumAI"
repository = "https://github.com/sevruscorporations/FerrumAI"

[tool.setuptools.packages.find]
where = ["."]
include = ["ferrumai*"]
exclude = ["tests*", "test.py"]
